--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
         context: ./image
 
       volumes:
-        # To add
+        - "/home/${USER_NAME}/DropboxDocker:/dbox/Dropbox"
 
       environment:
-        - DBOX_UID=
-        - DBOX_GID=
+        - DBOX_UID="${UID}"
+        - DBOX_GID="${GID}"
         - DBOX_SKIP_UPDATE=
