--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,13 +1,24 @@
 FROM debian:jessie
-MAINTAINER Jan Broer <janeczku@yahoo.de>
+MAINTAINER GitHub-ers
 ENV DEBIAN_FRONTEND noninteractive
+
+# Dependenies for GnuPG
+RUN apt-get update && apt-get install -y \
+    gnupg2 gnupg
 
 # Following 'How do I add or remove Dropbox from my Linux repository?' - https://www.dropbox.com/en/help/246
 RUN echo 'deb http://linux.dropbox.com/debian jessie main' > /etc/apt/sources.list.d/dropbox.list \
-	&& apt-key adv --keyserver pgp.mit.edu --recv-keys 1C61A2656FB57B7E4DE0F4C1FC918B335044912E \
-	&& apt-get -qqy update \
+	&& apt-key adv --keyserver pool.sks-keyservers.net --recv-keys 1C61A2656FB57B7E4DE0F4C1FC918B335044912E \
+	# Next key servers are down - start
+        # key server pgp.mit.edu is down, @see https://github.com/nginxinc/docker-nginx/issues/156
+        # && apt-key adv --keyserver pgp.mit.edu --recv-keys 1C61A2656FB57B7E4DE0F4C1FC918B335044912E \
+        # && apt-key adv --keyserver hkp://pool.sks-keyservers.net:80 --recv-keys 5044912E \
+	# Next key servers are down - end
+	&& apt-get -qqy update
 	# Note 'ca-certificates' dependency is required for 'dropbox start -i' to succeed
-	&& apt-get -qqy install ca-certificates curl python-gpgme dropbox \
+
+# Split into two parts for debugging reasons.
+RUN  apt-get -qqy install ca-certificates curl python-gpgme dropbox \
 	# Perform image clean up.
 	&& apt-get -qqy autoclean \
 	&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
